--- a/aura/aura.tex
+++ b/aura/aura.tex
@@ -184,7 +184,7 @@
     \end{itemize}
 
     \begin{tabular}{>{\arraybackslash}m{40px} >{\arraybackslash}m{320px}}
-        \includegraphics[width=30px]{images/key.png} & Collaborative decryption works because each tallier has only a portion of the tallier key, and can't decrypt anything alone. \\~\\
+        \includegraphics[width=30px]{images/key.png} & Collaborative decryption is used since each tallier has only a portion of the tallier key, and can't decrypt anything alone. \\~\\
     \end{tabular}
 
     The collaborative decryption includes a proof that the totals are correct.
